Fix img overflow on screen sizes < 320px

--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
   font-family: "Outfit", serif;
+  padding: var(--space-300);
 }
 
 .card {
-  width: 320px;
+  max-width: 320px;
   background-color: var(--white);
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 25%);
   border-radius: 1.25rem;
@@ -43,7 +43,9 @@ body {
 }
 
 .qr-code {
-  width: 100%;
+  display: block;
+  max-width: 100%;
+  height: auto;
   border-radius: 0.625rem;
 }
 
